# task-pdf-writer-v2-bot

./: .gitignore  Cargo.toml  README.md  schema.sql
migrations/: 20230203105218_initial_migration.sql  20230203182157_contest_relative_path.sql  20230205073342_add_private_key.sql
src/: lib.rs  main.rs  traits.rs  util.rs
src/commands/: config.rs  genpdf.rs  mod.rs  ping.rs  sendstr.rs
