[package]
name = "task-pdf-writer-v2"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
git2 = "0.16.1"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "offline", "postgres"] }
dotenv = "0.15.0"
reqwest = "0.11.14"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
base64 = "0.21.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]