[package]
name = "task-pdf-writer-v2"
version = "0.0.2"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
git2 = "0.16.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
# sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "offline", "postgres"] }
# dotenv = "0.15.0"
reqwest = "0.11.14"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
base64 = "0.21.0"
shuttle-secrets = "0.9.0"
shuttle-service = { version = "0.9.0", features = ["bot-serenity"] }
shuttle-shared-db = { version = "0.9.0", features = ["postgres"] }
tracing = "0.1.35"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
